--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+//    id "com.google.protobuf" version "0.9.4"
 }
 
 android {
@@ -22,7 +23,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -31,6 +32,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+
+//protobuf {
+//    generatedFilesBaseDir = '$projectDir/proto'
+//}
 
 dependencies {
 
@@ -58,4 +63,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-rxjava3:$room_version"
+
+    //Protocol Buffer
+//    implementation "com.google.protobuf:protobuf-java:3.24.0"
 }
